# dtcc-viewer

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: CI-docs.yml  ci-build-tests.yml  ci-wheels.yml  ci.yml
docs/: development.md  installation.md  introduction.md  usage.md
pyimgui/: .gitignore  README.md  pyproject.toml  setup.py
pyimgui/doc/: requirements-dev.txt  requirements-test.txt
pyimgui/imgui/: ansifeed.pxd  cimgui.pxd  core.pxd  core.pyx  internal.pxd  internal.pyx
sandbox/: batch_viewer.py  batch_viewer_2.py  camera.py  cityjson_loading.py  gl_viewer.py  imgui_examples.py  load_primitives.py  obj_loader.py  opengl_10_draw_billboard.py  opengl_10_draw_particles.py  opengl_11_draw_billboard.py  opengl_11_draw_oit.py  opengl_11_draw_particles.py  opengl_12_draw_oit_complex.py  opengl_12_draw_particles_classes.py  opengl_13_picking_3d.py  opengl_14_picking_FBO.py  opengl_15_shader_color_calcs.py  opengl_16_texture_data.py  opengl_17_infinity_grid.py  opengl_18_earth_sphere.py  opengl_19_triangle_subdivition.py  opengl_1_draw_arrays.py  opengl_20_gs_normals.py  opengl_2_draw_arrays_strip.py  opengl_3_draw_elements.py  opengl_4_draw_cube.py  opengl_5_draw_cube_texture.py  opengl_6_draw_cube_persp.py  opengl_7_draw_cube_lookat.py  opengl_8_draw_cube_lights  opengl_8_draw_cube_lights.py  opengl_8_draw_obj_file copy.py  opengl_9_draw_camera.py  opengl_9_draw_shadows.py  opengl_9a_draw_shadows.py  opengl_9b_draw_shadows.py  opengl_9b_draw_shadows_multi.py  picking_interaction.py  plot.py  (+4 more)
sandbox/data/: city.3dm  city.3dm.rhl  city_point_cloud_69k.txt  simple_city.objbak
src/dtcc_viewer/: __init__.py  bounds.py  building.py  city.py  city_opengl.py  citymodel.py  colors.py  grid.py  linestring.py  logging.py  mesh.py  mesh_fancy_opengl.py  mesh_fancy_shadow_opengl.py  mesh_opengl.py  mesh_pyglet.py  multilinestring.py  multisurface.py  new_raster.py  notebook_functions.py  object.py  object_opengl.py  pointcloud.py  pointcloud_opengl.py  random_colors.py  roadnetwork.py  roadnetwork_opengl.py  scene_builder.py  surface.py  utils.py  volume_grid.py  volume_mesh.py
src/dtcc_viewer/opengl/: __init__.py  action.py  camera.py  data_wrapper.py  environment.py  gl_axes.py  gl_grid.py  gl_lines.py  gl_linestring.py  gl_mesh.py  gl_model.py  gl_north.py  gl_object.py  gl_pointcloud.py  gl_points.py  gl_quad.py  gl_raster.py  gui.py  interaction.py  parameters.py  parts.py  scene.py  situation.py  submeshes.py  utils.py  window.py  wrapper.py  wrp_bounds.py  wrp_building.py  wrp_city.py  wrp_data.py  wrp_geometries.py  wrp_grid.py  wrp_lines.py  wrp_linestring.py  wrp_linestrings.py  wrp_mesh.py  wrp_multilinestring.py  wrp_object.py  wrp_pointcloud.py  (+4 more)
src/dtcc_viewer/opengl_viewer/: __init__.py  bundle.py  camera.py  city_wrapper.py  environment.py  gl_linestring.py  gl_mesh.py  gl_model.py  gl_pointcloud.py  gui.py  interaction.py  linestring_gl.py  main.py  mesh.py  mesh_data.py  mesh_fancy.py  mesh_fancy_shadows.py  mesh_gl.py  mesh_shadow.py  mesh_wrapper.py  model_gl.py  object_wrapper.py  parameters.py  particles.py  point_cloud_data.py  point_cloud_gl.py  pointcloud_gl.py  pointcloud_wrapper.py  roadnetwork_data.py  roadnetwork_gl.py  roadnetwork_wrapper.py  scene.py  shaders.py  shaders_color_maps.py  shaders_lines.py  shaders_mesh.py  (+20 more)
tests/: _test_opengl.py  run-tests
tests/data/: cube_pc.csv
tests/python/: test_colors.py  test_opengl.py  test_viewer.py  tests.py
(+22 files in other folders)
