[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.7.21"
name = "dtcc-viewer"
description = "DTCC Viewer"
readme = "README.md"
authors = [
  { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "jupyter",
  "ipywidgets",
  "matplotlib",
  "colormap",
  "easydev",
  "numpy",
  "folium >= 0.14.0",
  "pyglet",
  "trimesh",
  "pyopengl",
  "pyglfw",
  "pyrr",
  "pillow",
  "glfw",
  "imgui",
  "dtcc-model >= 0.7.21",
  "dtcc-io >= 0.7.21",
  "dtcc-common >= 0.7.21",
]

[project.optional-dependencies]
test = ["pytest"]
