[build-system]
requires = ["setuptools>=74.1", "setuptools-scm", "wheel", "Cython>=3.0.1", "PyOpenGL", "glfw", "click"]
build-backend = "setuptools.build_meta"

[project]
version = "0.9.5"
name = "dtcc-viewer"
description = "DTCC Viewer"
readme = "README.md"
authors = [
  { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "jupyter",
  "ipywidgets",
  "matplotlib",
  "colormap",
  "numpy",
  "folium >= 0.14.0",
  "pyglet",
  "trimesh",
  "pyopengl",
  "pyglfw",
  "pyrr",
  "pvlib",
  "pillow",
  "glfw",
  "tqdm>=4.66.1",
  "dtcc-core == 0.9.6",
]

[tool.setuptools]
package-dir = {"" = "src", "imgui" = "pyimgui/imgui"}

[tool.setuptools.packages.find]
where = ["src", "pyimgui"]
include = ["dtcc_viewer*", "imgui*"]
